--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <section> <h1 hidden></h1></section>
      <!--секция-шапка-->
-    <header>
+    <header class="line">
         <div class="container">
         <nav class="main-nav">
             <a href=""><span class="logo">Web</span><span class="logo-page">Studio</span></a>
@@ -30,9 +29,6 @@
         </nav>
         </div>
     </header>
-    <div class="line">
-      <hr>
-    </div>
     <!--секция-кнопки--> 
     <main>
 <section>
@@ -47,6 +43,7 @@
 </div>
 </section>
      <!--секция-картинки-->
+     <section class="pictures-list">
      <div class="container">
 <ul class="feature-list">
 <li class="item-list"><a href=""><img src="./img/img8.png" alt="фото женщины и 2 мущин" width="370">
@@ -96,6 +93,7 @@
 
 </ul>
 </div>
+</section>
 </main>
 <!--секция-контакти-->
 <footer class="graybackground">
@@ -115,3 +113,4 @@
 
 </body>
 </html>
+
