--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
     <li class="com-pres">
      <img src="./img/img4.jpg" alt="фото Игорь Демьяненко" width="270">
      <h3 class="presentation-name">Игорь Демьяненко</h3> 
-     <p class="presentation-prof">Product Designer</p></li>
+     <p class="presentation-prof">Product Designer</p>
+    <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-instagram1"></use></svg></a>
+    <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-twitter1"></use></svg></a>
+    <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-facebook1"></use></svg></a>
+    <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-linkedin1"></use></svg></a>
+    </li>
     
      <li class="com-pres">
       <img src="./img/img5.jpg" alt="фото Ольга Репина" width="270">
