--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
  <!--секция2-->
  
- <section>
+ <section class="box-infor">
    <div class="container">
  <ul class="information-menu">
    <div class="info">
@@ -70,7 +70,7 @@
 
  <!--секция3-->
  
-   <section>
+   <section class="box-prez">
   <div class="container">
   <div class="cont-box">
    <h2 class="presentation">Чем мы занимаемся</h2>
@@ -93,7 +93,7 @@
      <h3 class="presentation-name">Игорь Демьяненко</h3> 
      <p class="presentation-prof">Product Designer</p>
      <ul class="master-social">
-    <li class="mast"><a class="master-linc" href=""><svg class="master-icon"><use href="./img/symbol-defs.svg.svg#icon-instagram1"></use></svg></a></li>
+    <li class="mast"><a class="master-linc" href=""><svg class="master-icon"><use class="mast-hov" href="./img/symbol-defs.svg.svg#icon-instagram1"></use></svg></a></li>
     <li class="mast"><a class="master-linc" href=""><svg class="master-icon"><use href="./img/symbol-defs.svg.svg#icon-twitter1"></use></svg></a></li>
     <li class="mast"><a class="master-linc" href=""><svg class="master-icon"><use href="./img/symbol-defs.svg.svg#icon-facebook1"></use></svg></a></li>
     <li class="mast"><a class="master-linc" href=""><svg class="master-icon"><use href="./img/symbol-defs.svg.svg#icon-linkedin1"></use></svg></a></li>
