--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   </ul> 
   
   <ul class="site-too">
+    <li><a href=""><svg  class="mail-tel-tem" ><use href="./img/symbol-defs.svg.svg#icon-envelope"></use></svg></a></li>
     <li class="item"><a class="change-color-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>  
+    <li><svg  class="mail-tel-ti" ><use href="./img/symbol-defs.svg.svg#icon-smartphone"></use></svg></li>
     <li class="item"><a class="change-color-mail" href="tel:+380961111111">+38 096 111 11 11</a></li>  
  </ul> 
    </nav>
@@ -138,6 +140,21 @@
  </ul>
  </div>
   </section>
+      <!--Дополнительная-->
+   <Section>
+     <div>
+       <h2>Постоянные клиенты</h2>
+       <ul>
+
+       </ul>
+     </div>
+   </Section>      
+
+
+
+
+
+
 </main>
    <!--секция5-->
   
