--- a/index.html
+++ b/index.html
@@ -141,18 +141,23 @@
  </div>
   </section>
       <!--Дополнительная-->
-   <Section>
-     <div>
-       <h2>Постоянные клиенты</h2>
-       <ul>
-
+   <Section class="myfile">
+     <div class="container" >
+       <h2 class="prese">Постоянные клиенты</h2> 
+       <ul class="myfilcont">
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client1"  widht=44px; heidh=49px; ></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client2"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client3"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client4"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client5"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client6"></use></svg></a> </li>
        </ul>
      </div>
    </Section>      
 
 
 
-
+fill="#afb1b8" style="fill: var(--color1, #afb1b8)"
 
 
 </main>
@@ -167,6 +172,16 @@
     <li class="foter-li"><a class="contactable-info" href="mailto:info@example.com">info@example.com</a></li> 
     <li class="foter-li"><a class="contactable-info" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
+  <div class="footersymbol">
+    <p>присоединяйтесь</p> <a href="./img/symbol-defs.svg.svg"></a>
+    <ul class="fotersvg">
+      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-instagram2"></use></svg></a></li>
+      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-twitter2"></use></svg></a></li>
+      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-facebook2"></use></svg></a></li>
+      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-linkedin2"></use></svg></a></li>
+    </ul>
+  </div>
+
  </div>
 </div>
   </footer>
