--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-fill="#afb1b8" style="fill: var(--color1, #afb1b8)"
+
 
 
 </main>
@@ -166,19 +166,21 @@ fill="#afb1b8" style="fill: var(--color1, #afb1b8)"
    <footer class="graybackground">
      <div class="container">
      <div class="conteiner-footer">
+       <div class="teinerfoot">
      <a href=""><span class="logo">Web</span><span class="logo-page-too">Studio</span></a>
      <address class="contactable">г. Киев, пр-т Леси Украинки, 26</address>
      <ul class="foter-li">
     <li class="foter-li"><a class="contactable-info" href="mailto:info@example.com">info@example.com</a></li> 
     <li class="foter-li"><a class="contactable-info" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
+    </div>
   <div class="footersymbol">
-    <p>присоединяйтесь</p> <a href="./img/symbol-defs.svg.svg"></a>
+    <p class="textfoot">присоединяйтесь</p>
     <ul class="fotersvg">
-      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-instagram2"></use></svg></a></li>
-      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-twitter2"></use></svg></a></li>
-      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-facebook2"></use></svg></a></li>
-      <li class="fotermast"> <a href=""> <svg><use href="./img/symbol-defs.svg.svg#icon-linkedin2"></use></svg></a></li>
+      <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-instagram2"></use></svg></a></li>
+      <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-twitter2"></use></svg></a></li>
+      <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-facebook2"></use></svg></a></li>
+      <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-linkedin2"></use></svg></a></li>
     </ul>
   </div>
 
