--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
    <div class="container">
  <ul class="information-menu">
    <div class="info">
-   <li> <img src="./img/jpg/Group1.jpg" alt="">
+   <li> <div class="inform-cont"><svg width="70px"; height="70px";><use href="./img/symbol-defs.svg#icon-Group"></use></svg> </div>
      <h3 class="information">Внимание к деталям</h3>
     <p class="information-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li></div>
     <div class="info">
-    <li> <img src="./img/jpg/Group2.jpg" alt="">
+    <li><div class="inform-cont"><svg width="70px"; height="70px";><use href="./img/symbol-defs.svg#icon-clock1"></use></svg> </div> 
       <h3 class="information">Пунктуальность</h3> 
     <p class="information-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li></div>
     <div class="info">
-   <li> <img src="./img/jpg/Group3.jpg" alt="">
+   <li><div class="inform-cont"><svg width="70px"; height="70px";><use href="./img/symbol-defs.svg#icon-diagram1"></use></svg> </div> 
      <h3 class="information">Планирование</h3> 
     <p class="information-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li></div>
     <div class="info">
-   <li> <img src="./img/jpg/Group 4.jpg" alt="">
+   <li><div class="inform-cont"><svg width="70px"; height="70px";><use href="./img/symbol-defs.svg#icon-astronaut1"></use></svg> </div> 
      <h3 class="information">Современные технологии</h3> 
     <p class="information-text"> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li></div>
 </ul>
@@ -145,12 +145,12 @@
      <div class="container" >
        <h2 class="prese">Постоянные клиенты</h2> 
        <ul class="myfilcont">
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client1"  widht=44px; heidh=49px; ></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client2"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client3"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client4"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client5"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg><use href="./img/symbol-defs.svg.svg#icon-Client6"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="44.84px"; height="49.86px";><use href="./img/symbol-defs.svg.svg#icon-logo1"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="40.51px"; height="52.67px";><use href="./img/symbol-defs.svg.svg#icon-logo2"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="41.53px"; height="43.15px";><use href="./img/symbol-defs.svg.svg#icon-logo3"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="80.68px"; height="42.56px";><use href="./img/symbol-defs.svg.svg#icon-logo4"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="59.76px"; height="47.6px";><use href="./img/symbol-defs.svg.svg#icon-logo5"></use></svg></a> </li>
+         <li class="myfilc"> <a href=""><svg  width="89.62px"; height="46.02px";><use href="./img/symbol-defs.svg.svg#icon-logo6"></use></svg></a> </li>
        </ul>
      </div>
    </Section>      
