--- a/portfolio.html
+++ b/portfolio.html
@@ -97,20 +97,35 @@
 </main>
 <!--секция-контакти-->
 <footer class="graybackground">
-    <div class="gray-footer">
     <div class="container">
-    <div class="conteiner-footer">
-    <a href=""><span class="logo">Web</span><span class="logo-page-too">Studio</span></a>
-      <address class="contactable">г. Киев, пр-т Леси Украинки, 26</address>
-     <ul class="foter-li">
-     <li class="foter-li"><a class="contactable-info" href="mailto:info@example.com">info@example.com</a></li> 
-     <li class="foter-li"><a class="contactable-info" href="tel:+380991111111">+38 099 111 11 11</a></li>
-     </ul>
-    </div>
-    </div>
+        <div class="conteiner-footer">
+            <div class="teinerfoot">
+                <a href=""><span class="logo">Web</span><span class="logo-page-too">Studio</span></a>
+                <address class="contactable">г. Киев, пр-т Леси Украинки, 26</address>
+                <ul class="foter-li">
+                    <li class="foter-li"><a class="contactable-info" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="foter-li"><a class="contactable-info" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </div>
+            <div class="footersymbol">
+                <p class="textfoot">присоединяйтесь</p>
+                <ul class="fotersvg">
+                    <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg">
+                                <use href="./img/symbol-defs.svg.svg#icon-instagram2"></use>
+                            </svg></a></li>
+                    <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg">
+                                <use href="./img/symbol-defs.svg.svg#icon-twitter2"></use>
+                            </svg></a></li>
+                    <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg">
+                                <use href="./img/symbol-defs.svg.svg#icon-facebook2"></use>
+                            </svg></a></li>
+                    <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg">
+                                <use href="./img/symbol-defs.svg.svg#icon-linkedin2"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+
+        </div>
     </div>
 </footer>
-
-</body>
-</html>
-
