--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
      <div class="container" >
        <h2 class="prese">Постоянные клиенты</h2> 
        <ul class="myfilcont">
-         <li class="myfilc"> <a href=""><svg  width="44.84px"; height="49.86px";><use href="./img/symbol-defs.svg.svg#icon-logo1"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg  width="40.51px"; height="52.67px";><use href="./img/symbol-defs.svg.svg#icon-logo2"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg  width="41.53px"; height="43.15px";><use href="./img/symbol-defs.svg.svg#icon-logo3"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg  width="80.68px"; height="42.56px";><use href="./img/symbol-defs.svg.svg#icon-logo4"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg  width="59.76px"; height="47.6px";><use href="./img/symbol-defs.svg.svg#icon-logo5"></use></svg></a> </li>
-         <li class="myfilc"> <a href=""><svg  width="89.62px"; height="46.02px";><use href="./img/symbol-defs.svg.svg#icon-logo6"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="44.84px"; height="49.86px";><use href="./img/symbol-defs.svg.svg#icon-logo1"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="40.51px"; height="52.67px";><use href="./img/symbol-defs.svg.svg#icon-logo2"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="41.53px"; height="43.15px";><use href="./img/symbol-defs.svg.svg#icon-logo3"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="80.68px"; height="42.56px";><use href="./img/symbol-defs.svg.svg#icon-logo4"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="59.76px"; height="47.6px";><use href="./img/symbol-defs.svg.svg#icon-logo5"></use></svg></a> </li>
+         <li class="myfilc"> <a class="contmy" href=""><svg a class="contmyfi"  width="89.62px"; height="46.02px";><use href="./img/symbol-defs.svg.svg#icon-logo6"></use></svg></a> </li>
        </ul>
      </div>
    </Section>      
