--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                 </ul>
             </div>
             <div class="footersymbol">
-                <p class="textfoot">присоединяйтесь</p>
+                <p class="textfoot">ПРИСОЕДИНЯЙТЕСЬ</p>
                 <ul class="fotersvg">
                     <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg">
                                 <use href="./img/symbol-defs.svg.svg#icon-instagram2"></use>
