--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </ul>
     </div>
   <div class="footersymbol">
-    <p class="textfoot">присоединяйтесь</p>
+    <p class="textfoot">ПРИСОЕДИНЯЙТЕСЬ</p>
     <ul class="fotersvg">
       <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-instagram2"></use></svg></a></li>
       <li class="mylifoot"> <a class="fotermast" href=""> <svg class="footsvg"><use href="./img/symbol-defs.svg.svg#icon-twitter2"></use></svg></a></li>
