--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,14 @@
             </ul>
         
 <ul class="site-too">
-    <li><a href=""><svg class="mail-tel-tem">
+    <li class="itemtoo"><a href=""><svg class="mail-tel-tem">
                 <use href="./img/symbol-defs.svg.svg#icon-envelope"></use>
             </svg></a></li>
-    <li class="item"><a class="change-color-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><svg class="mail-tel-ti">
+    <li class="itemtoo"><a class="change-color-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li class="itemtoo"><svg class="mail-tel-ti">
             <use href="./img/symbol-defs.svg.svg#icon-smartphone"></use>
         </svg></li>
-    <li class="item"><a class="change-color-mail" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li class="itemtoo"><a class="change-color-mail" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
         </nav>
         </div>
